syntax = "proto3";
package thesixnetwork.sixprotocol.evmbind;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "evmbind/params.proto";
import "evmbind/binding.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/thesixnetwork/six-protocol/x/evmbind/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/thesixnetwork/six-protocol/evmbind/params";
  }
  // Queries a Binding by index.
	rpc Binding(QueryGetBindingRequest) returns (QueryGetBindingResponse) {
		option (google.api.http).get = "/thesixnetwork/six-protocol/evmbind/binding/{ethAddress}";
	}

	// Queries a list of Binding items.
	rpc BindingAll(QueryAllBindingRequest) returns (QueryAllBindingResponse) {
		option (google.api.http).get = "/thesixnetwork/six-protocol/evmbind/binding";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetBindingRequest {
	  string ethAddress = 1;

}

message QueryGetBindingResponse {
	Binding binding = 1 [(gogoproto.nullable) = false];
}

message QueryAllBindingRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBindingResponse {
	repeated Binding binding = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
